// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthCoin tests should display Branded AuthCoin and disallow style customization 1`] = `
<div>
  <div
    aria-hidden="true"
    class="MuiBox-root emotion-0"
    data-se="factor-beacon mfa-duo "
  >
    <svg
      aria-labelledby="mfa-duo"
      fill="none"
      height="2.85714286rem"
      role="img"
      viewBox="0 0 48 48"
      width="2.85714286rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="mfa-duo"
      >
        factor.duo
      </title>
      <path
        clip-rule="evenodd"
        d="M10.632 17H4v6.13h13.25c-.197-3.418-3.085-6.13-6.618-6.13Zm7.242 0v6.506c0 3.466 2.766 6.3 6.25 6.494V17h-6.25Zm13.886 6.13c.2-3.418 3.087-6.13 6.62-6.13s6.42 2.712 6.62 6.13H31.76Zm-6.873 6.859h6.238v-6.114a6.32 6.32 0 0 0 .012-.375V17h-6.25v12.989Zm-14.255.01H4v-6.124h13.25C17.054 27.291 14.166 30 10.633 30ZM38.38 30c-3.533 0-6.42-2.709-6.62-6.125H45C44.801 27.291 41.913 30 38.38 30Z"
        fill="#77AF54"
        fill-rule="evenodd"
      />
    </svg>
  </div>
</div>
`;

exports[`AuthCoin tests should display Non-Branded AuthCoin with style customizations 1`] = `
<div>
  <div
    aria-hidden="true"
    class="MuiBox-root emotion-0"
    data-se="factor-beacon mfa-hotp "
  >
    <svg
      aria-labelledby="mfa-hotp"
      fill="none"
      height="2.85714286rem"
      role="img"
      viewBox="0 0 48 48"
      width="2.85714286rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="mfa-hotp"
      >
        factor.hotp.description
      </title>
      <path
        class="siwFillSecondary"
        d="M28 23h-6v-6h1v5h5v1Z"
        fill="#A7B5EC"
      />
      <path
        class="siwFillSecondary"
        d="m29.39 14.32 1.46-1.47-.7-.7-1.6 1.59A11.323 11.323 0 0 0 23 12.03V10h2V9h-5v1h2v2.03c-1.967.078-3.88.667-5.55 1.71l-1.6-1.59-.7.7 1.46 1.47A11.459 11.459 0 0 0 13.79 31h1.37a10.5 10.5 0 1 1 14.68 0h1.37a11.459 11.459 0 0 0-1.82-16.68Z"
        fill="#A7B5EC"
      />
      <path
        class="siwFillPrimaryDark"
        d="m21.257 33.929-.514-.858L19 34.117V32h-1v2.117l-1.743-1.046-.514.858L17.528 35l-1.785 1.071.514.858L18 35.883V38h1v-2.117l1.743 1.046.514-.858L19.472 35l1.785-1.071Zm8 0-.514-.858L27 34.117V32h-1v2.117l-1.743-1.046-.514.858L25.528 35l-1.785 1.071.514.858L26 35.883V38h1v-2.117l1.743 1.046.514-.858L27.472 35l1.785-1.071Zm8 0-.514-.858L35 34.117V32h-1v2.117l-1.743-1.046-.514.858L33.528 35l-1.785 1.071.514.858L34 35.883V38h1v-2.117l1.743 1.046.514-.858L35.472 35l1.785-1.071Z"
        fill="#00297A"
      />
    </svg>
  </div>
</div>
`;

exports[`AuthCoin tests should display PasskeysIcon when authenticatorKey is webauthn and displayName is Passkeys 1`] = `
<div>
  <div
    aria-hidden="true"
    class="MuiBox-root emotion-0"
    data-se="factor-beacon mfa-webauthn "
  >
    <svg
      aria-labelledby="mfa-webauthn"
      fill="none"
      height="2.85714286rem"
      role="img"
      viewBox="-5 -5 45 45"
      width="2.85714286rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="mfa-webauthn"
      >
        factor.webauthn.biometric
      </title>
      <path
        d="M25.4311 7.75813C28.4403 7.58607 31.1652 9.63438 31.8403 12.5634C32.3867 14.9336 31.5039 17.4163 29.596 18.8967L29.5797 20.4919C29.2854 20.7879 28.9676 21.0599 28.6656 21.3472C28.609 21.4012 28.4897 21.4839 28.5745 21.5533L29.5629 22.5611L29.5838 22.6083L29.5724 23.5267L28.4965 24.6734C28.8542 25.0489 29.2492 25.3912 29.5797 25.7902V27.8694L25.923 30.8824C24.8915 30.0384 23.8451 29.2109 22.8177 28.3615C22.7406 28.2975 22.2555 27.9093 22.2437 27.8694L22.2392 19.1123C22.2296 19.0624 21.9739 18.9021 21.9109 18.8508C17.4816 15.2282 19.7509 8.08362 25.4306 7.75858L25.4311 7.75813ZM23.7997 18.1735L23.8038 27.0786L23.9285 27.2261L25.9189 28.835L27.9855 27.1353V26.4099L26.3411 24.742L26.3188 24.6957L27.8382 23.0614L26.2753 21.4294L27.9855 19.8264L28.0082 18.0559C30.3913 16.7444 31.1652 13.6534 29.63 11.3708C27.7198 8.53123 23.4597 8.69693 21.759 11.6627C20.411 14.0138 21.3677 17.0341 23.7993 18.1735H23.7997Z"
        fill="#4459DB"
      />
      <path
        d="M17.6921 11.7331C14.1171 14.9849 8.31991 12.9225 7.60172 8.16448C6.87991 3.38556 11.6859 -0.320643 16.1111 1.66456C20.1038 3.45547 20.9371 8.78233 17.6921 11.7336V11.7331ZM13.2348 2.71913C9.94897 2.9443 8.06419 6.67047 9.72998 9.50641C11.4837 12.4922 15.8758 12.459 17.5507 9.42379C19.3135 6.22876 16.8429 2.47217 13.2348 2.71913Z"
        fill="#272727"
      />
      <path
        d="M1.56377 28.3155L0 28.089C0.236221 26.5605 0.68554 25.0633 1.28176 23.641C2.92125 19.7291 5.84658 16.2903 10.1521 15.3624C12.8711 14.7764 15.6931 15.2462 18.2607 16.2182L18.7907 17.6863C18.7948 17.7498 18.5395 17.7939 18.4815 17.8002C17.9297 17.8624 17.3788 17.5624 16.856 17.3976C14.7795 16.7416 12.5524 16.4424 10.4019 16.9286C5.2889 18.084 2.37899 23.5089 1.56423 28.3155H1.56377Z"
        fill="#272727"
      />
      <path
        d="M8.13669 23.8695C7.55634 25.664 7.19725 27.5244 6.88168 29.3843L6.791 29.4065L5.32788 29.1787C5.38184 28.6611 5.48612 28.1436 5.58405 27.6311C5.86244 26.1775 6.18707 24.7229 6.66632 23.3234L8.13669 23.8695Z"
        fill="#272727"
      />
      <path
        d="M25.6805 11.4806C27.4982 11.3957 28.6652 13.4064 27.6986 14.9535C26.8095 16.3762 24.6853 16.3526 23.8374 14.9017C22.9755 13.4263 23.9794 11.5601 25.681 11.4806H25.6805ZM25.6565 13.0682C24.8195 13.2003 24.9614 14.5703 25.9176 14.4192C26.7455 14.2884 26.5882 12.9211 25.6565 13.0682Z"
        fill="#272727"
      />
    </svg>
  </div>
</div>
`;

exports[`AuthCoin tests should display SecurityKeyOrBiometricsIcon when authenticatorKey is webauthn and displayName is default 1`] = `
<div>
  <div
    aria-hidden="true"
    class="MuiBox-root emotion-0"
    data-se="factor-beacon mfa-webauthn "
  >
    <svg
      aria-labelledby="mfa-webauthn"
      fill="none"
      height="2.85714286rem"
      role="img"
      viewBox="0 0 48 48"
      width="2.85714286rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="mfa-webauthn"
      >
        factor.webauthn.biometric
      </title>
      <path
        class="siwFillPrimaryDark"
        d="M24 17V9h-9v8h-3v15.5a2.5 2.5 0 0 0 2.5 2.5h6.34a8.58 8.58 0 0 1-.38-1H14.5a1.5 1.5 0 0 1-1.5-1.5V18h13v3.84a8.58 8.58 0 0 1 1-.38V17h-3Zm-8 0v-7h7v7h-7Z"
        fill="#00297A"
      />
      <path
        class="siwFillPrimaryDark"
        d="M19.5 25a2.5 2.5 0 1 1 0-5 2.5 2.5 0 0 1 0 5Zm0-4a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3Z"
        fill="#00297A"
      />
      <path
        class="siwFillSecondary"
        d="M30 40a9 9 0 1 1 9-9 9.01 9.01 0 0 1-9 9Zm0-17a8 8 0 1 0 8 8 8.009 8.009 0 0 0-8-8Z"
        fill="#A7B5EC"
      />
      <path
        class="siwFillSecondary"
        d="M32.084 36.019a.472.472 0 0 1-.319-.112.501.501 0 0 1-.159-.532c.43-1.389 1.274-4.787-.119-6.352a1.962 1.962 0 0 0-1.946-.6 1.93 1.93 0 0 0-1.387 2.354c.007.024.666 2.823-.966 4.55a.5.5 0 1 1-.727-.685c1.24-1.314.728-3.6.723-3.622a2.933 2.933 0 0 1 2.106-3.566 2.977 2.977 0 0 1 2.944.906c1.67 1.875.922 5.386.328 7.312a.5.5 0 0 1-.478.347Z"
        fill="#A7B5EC"
      />
      <path
        class="siwFillSecondary"
        d="M28.63 37.25a.5.5 0 0 1-.359-.849c2.235-2.3 1.345-5.782 1.336-5.817a.5.5 0 0 1 .966-.259c.045.165 1.052 4.067-1.586 6.774a.5.5 0 0 1-.358.151Z"
        fill="#A7B5EC"
      />
      <path
        class="siwFillSecondary"
        d="M34.88 35.2a.5.5 0 0 1-.488-.612c.493-2.2.716-5.235-1.03-7.2a4.508 4.508 0 0 0-4.455-1.357 4.416 4.416 0 0 0-2.72 2.069 4.2 4.2 0 0 0-.468 3.2 3.1 3.1 0 0 1-.355 2.347.5.5 0 1 1-.728-.685 2.37 2.37 0 0 0 .11-1.434 5.174 5.174 0 0 1 .577-3.939 5.42 5.42 0 0 1 3.333-2.518 5.524 5.524 0 0 1 5.453 1.66c1.628 1.832 2.051 4.551 1.257 8.082a.5.5 0 0 1-.487.387Z"
        fill="#A7B5EC"
      />
    </svg>
  </div>
</div>
`;

exports[`AuthCoin tests should display branded AuthCoin when image URL is provided and AuthenticatorKey requires a branded Type 1`] = `
<div>
  <div
    aria-hidden="true"
    class="MuiBox-root emotion-0"
    data-se="factor-beacon mfa-duo "
  >
    <svg
      aria-labelledby="mfa-duo"
      fill="none"
      height="2.85714286rem"
      role="img"
      viewBox="0 0 48 48"
      width="2.85714286rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="mfa-duo"
      >
        factor.duo
      </title>
      <path
        clip-rule="evenodd"
        d="M10.632 17H4v6.13h13.25c-.197-3.418-3.085-6.13-6.618-6.13Zm7.242 0v6.506c0 3.466 2.766 6.3 6.25 6.494V17h-6.25Zm13.886 6.13c.2-3.418 3.087-6.13 6.62-6.13s6.42 2.712 6.62 6.13H31.76Zm-6.873 6.859h6.238v-6.114a6.32 6.32 0 0 0 .012-.375V17h-6.25v12.989Zm-14.255.01H4v-6.124h13.25C17.054 27.291 14.166 30 10.633 30ZM38.38 30c-3.533 0-6.42-2.709-6.62-6.125H45C44.801 27.291 41.913 30 38.38 30Z"
        fill="#77AF54"
        fill-rule="evenodd"
      />
    </svg>
  </div>
</div>
`;

exports[`AuthCoin tests should display custom image in place of standard Non-Branded AuthCoin when image URL is provided 1`] = `
<div>
  <div
    aria-hidden="true"
    class="MuiBox-root emotion-0"
    data-se="factor-beacon mfa-hotp "
  >
    <img
      alt="factor.hotp.description"
      class="MuiBox-root emotion-1"
      data-se="custom-logo"
      src="/img/socialIcons/okta.svg"
    />
  </div>
</div>
`;

exports[`AuthCoin tests should display standard theme Non-Branded AuthCoin without style customization 1`] = `
<div>
  <div
    aria-hidden="true"
    class="MuiBox-root emotion-0"
    data-se="factor-beacon mfa-hotp "
  >
    <svg
      aria-labelledby="mfa-hotp"
      fill="none"
      height="2.85714286rem"
      role="img"
      viewBox="0 0 48 48"
      width="2.85714286rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="mfa-hotp"
      >
        factor.hotp.description
      </title>
      <path
        class="siwFillSecondary"
        d="M28 23h-6v-6h1v5h5v1Z"
        fill="#A7B5EC"
      />
      <path
        class="siwFillSecondary"
        d="m29.39 14.32 1.46-1.47-.7-.7-1.6 1.59A11.323 11.323 0 0 0 23 12.03V10h2V9h-5v1h2v2.03c-1.967.078-3.88.667-5.55 1.71l-1.6-1.59-.7.7 1.46 1.47A11.459 11.459 0 0 0 13.79 31h1.37a10.5 10.5 0 1 1 14.68 0h1.37a11.459 11.459 0 0 0-1.82-16.68Z"
        fill="#A7B5EC"
      />
      <path
        class="siwFillPrimaryDark"
        d="m21.257 33.929-.514-.858L19 34.117V32h-1v2.117l-1.743-1.046-.514.858L17.528 35l-1.785 1.071.514.858L18 35.883V38h1v-2.117l1.743 1.046.514-.858L19.472 35l1.785-1.071Zm8 0-.514-.858L27 34.117V32h-1v2.117l-1.743-1.046-.514.858L25.528 35l-1.785 1.071.514.858L26 35.883V38h1v-2.117l1.743 1.046.514-.858L27.472 35l1.785-1.071Zm8 0-.514-.858L35 34.117V32h-1v2.117l-1.743-1.046-.514.858L33.528 35l-1.785 1.071.514.858L34 35.883V38h1v-2.117l1.743 1.046.514-.858L35.472 35l1.785-1.071Z"
        fill="#00297A"
      />
    </svg>
  </div>
</div>
`;

exports[`AuthCoin tests should not render the component when invalid authenticator key is provided 1`] = `<div />`;
